--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,23 @@ Version: 0.1
 Author: Adrian Pena
 Description: The nyuhmtR contains a suite of tools to access, process, and
   visualize NY-uHMT data.
+Depends:
+  R (>= 4.0.2)
+Imports:
+  dplyr (>= 1.0.0),
+  tidyverse (>= 1.3.0),
+  reshape2 (>= 1.4.4),
+  ggplot2 (>= 3.3.2),
+  Rcolorbrewer (>= 1.1.2),
+  moments (>= 0.14),
+  extRemes (>= 2.0.12)
+Suggests:
+  sp (>= 1.4.2),
+  sf (>= 0.9.5),
+  gstat (>= 2.0.6),
+  rgdal (>= 1.5.12),
+  automap (>= 1.0.14),
+  raster (>= 3.3.7)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
